--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,19 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.map.MapFragment">
+    tools:context=".ui.map.MapFragment"
+    android:padding="24dp"
+    >
 
+    <!-- Tiêu đề + icon -->
     <TextView
-        android:id="@+id/text_map"
-        android:layout_width="match_parent"
+        android:id="@+id/txt_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
+        android:text="Xác nhận đơn hàng"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <!-- Bản đồ -->
+    <ImageView
+        android:id="@+id/img_map"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    android:scaleType="centerCrop"
+    app:layout_constraintTop_toBottomOf="@id/txt_title"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginTop="24dp"
+    app:layout_constraintDimensionRatio="1:1.3" />
+
+    <!-- Nút xác nhận -->
+    <Button
+        android:id="@+id/btn_confirm"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Xác nhận"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@android:color/white"
+        android:background="@drawable/bg_button_thanh_toan"
+        app:layout_constraintTop_toBottomOf="@id/img_map"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="100dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
