--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -23,16 +23,16 @@
 
 
     <!-- Bản đồ -->
-    <ImageView
-        android:id="@+id/img_map"
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-    android:scaleType="centerCrop"
-    app:layout_constraintTop_toBottomOf="@id/txt_title"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginTop="24dp"
-    app:layout_constraintDimensionRatio="1:1.3" />
+        app:layout_constraintTop_toBottomOf="@id/txt_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        app:layout_constraintDimensionRatio="1:1.3" />
+
 
     <!-- Nút xác nhận -->
     <Button
@@ -43,7 +43,7 @@
         android:textSize="20sp"
         android:textColor="@android:color/white"
         android:background="@drawable/bg_button_thanh_toan"
-        app:layout_constraintTop_toBottomOf="@id/img_map"
+        app:layout_constraintTop_toBottomOf="@id/map_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp"
