--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:paddingHorizontal="16dp"
         android:paddingVertical="5dp"
         app:layout_constraintTop_toTopOf="@+id/text_home"
-        android:layout_marginTop="60dp"
+
         android:id="@+id/hello_frame">
 
         <!-- TextView bên trái -->
@@ -193,7 +193,7 @@
                         android:id="@+id/txt_side"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Món ăn kèm"
+                        android:text="Ăn kèm"
                         android:textColor="#E65100"
                         android:textSize="12sp"
                         android:textStyle="bold" />
